<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smasite.mimascota.AcercaDe">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbarfav"
        ></include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarrollado_por"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="5dp"
        android:textSize="@dimen/size_titulo"
        android:layout_margin="@dimen/top"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_imagen"
        app:srcCompat="@drawable/yop"
        android:layout_margin="@dimen/top"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_desarrollador"
        android:textSize="@dimen/size_titulo"
        android:layout_margin="@dimen/top"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio_desarrollador"
        android:layout_margin="@dimen/top"
        android:textAlignment="center"
        />

</LinearLayout>
